# AndroidProject

./: .gitignore  CLAUDE.md  Jenkinsfile  README.md  ajcore.20230203.173309.336.txt  ajcore.20230203.174005.694.txt  ajcore.20230208.143634.967.txt  ajcore.20230208.143825.897.txt  ajcore.20230208.185659.156.txt  ajcore.20230209.114116.016.txt  ajcore.20230209.193608.444.txt  ajcore.20230210.095849.464.txt  ajcore.20260531.012205.384.txt  ajcore.20260531.030400.414.txt  ajcore.20260531.131339.029.txt  ajcore.20260607.125424.794.txt  ajcore.20260607.125433.273.txt  build.gradle  gradle.properties  local.properties  local.properties.example  pgyer-upload.gradle  publish-app.gradle  screenMatch.properties  settings.gradle  versions.gradle
.work/: README.md
app/: README.md  build.gradle  proguard-rules.pro
demo/: README.md  build.gradle  proguard-rules.pro
demoproject/: build.gradle
jenkins/: AndroidProject-Pgyer.config.xml  README-Jenkins-Pgyer-AutoBuild.md  pgyer-build.sh
keystore/: debug.keystore  project.keystore
lib-common-media-picker/: build.gradle  proguard-rules.pro
lib_annotation/: README.md
lib_common-aop/: README.md  build.gradle  proguard-rules.pro
lib_common-auth/: README.md  build.gradle  proguard-rules.pro
lib_common-http/: README.md  build.gradle  proguard-rules.pro
lib_common-image/: README.md  build.gradle  proguard-rules.pro
lib_common-player/: build.gradle  consumer-rules.pro
lib_common-player/src/main/cpp/: CMakeLists.txt  ffmpeg_player_jni.cpp
lib_common-player/src/main/cpp/ffmpeg/armeabi-v7a/include/libavutil/: ffversion.h
(+1406 files in other folders)
